--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
    <body>
       <p>Radio check. Pilot, please confirm.</p>
       <p>Confirmed, control. Do we have all necessary supplies and gear?</p>
+      <p>Yes Pilot, Having the necessary supplies and gear </p>
    </body>
 </html>
