Added one more message

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
       <p>Radio check. Pilot, please confirm.</p>
       <p>Confirmed, control. Do we have all necessary supplies and gear?</p>
       <p>Yes Pilot, Having the necessary supplies and gear </p>
+      <p>Okey, ready to launch, then!</p>
    </body>
 </html>
